crates/turborepo-integration-tests/tests/snapshots/run_missing_tasks__root_script_recursive_turbo.snap
---
source: crates/turborepo-integration-tests/tests/run_missing_tasks.rs
expression: redact_output(&output)
---
• Packages in scope: //, another, my-app, util
• Running something in 4 packages
• Remote caching disabled
recursive_turbo_invocations (https://turborepo.com/messages/recursive-turbo-invocations)

  x Your `package.json` script looks like it invokes a Root Task (//
  | #something), creating a loop of `turbo` invocations. You likely have
  | misconfigured your scripts and tasks or your package manager's Workspace
  | structure.
   ,-[[TEMP_DIR]:4:18]
 3 |   "scripts": {
 4 |     "something": "turbo run build"
   :                  ^^^^^^^^|^^^^^^^^
   :                          `-- This script calls `turbo`, which calls the script, which calls `turbo`...
 5 |   },
   `----
